# itter

./: .gitignore  Readme.md  command_history.py  config.py  database.py  itter_banner.txt  main.py  output.sh  pyproject.toml  realtime_manager.py  requirements.txt  ssh_server.py  utils.py
itter/: main.py
itter/core/: command_history.py  config.py  utils.py
itter/data/: database.py
itter/resources/sql/: public_tables.json
itter/services/: realtime_manager.py
itter/ssh/: server.py  shell.py  ssh_server.py
itter/ssh/commands/: eet.py  follow.py  ignore.py  misc.py  profile.py  settings.py  timeline.py
sql/: public_functions.json  public_tables.json
src/itter/: command_history.py  config.py  context.py  database.py  main.py  realtime_manager.py  ssh_server.py  utils.py
ssh/: server.py  shell.py  ssh_server.py
ssh/commands/: eet.py  follow.py  ignore.py  misc.py  profile.py  settings.py  timeline.py
tests/: test_config.py  test_main.py
